# BreedProof

./: package.json
breed-oracle-subgraph/: index.js  package-lock.json  package.json  schema.graphql  subgraph.yaml
breed-oracle-subgraph/abis/: BreedOracleConsumer.json
breed-oracle-subgraph/src/: mapping.ts
circuits/: calldata.txt  input.json  package-lock.json  package.json  pot12_0001.ptau  powersOfTau28_hez_final_10.ptau  proof.json  verification_key.json  verify_breed.circom  verify_breed.r1cs  verify_breed.sym  verify_breed.zkey  witness.wtns
circuits/verify_breed_js/: verify_breed.wasm
contracts/: Verifier.sol
frontend/: index.html  package-lock.json  package.json
frontend/ios/: Info.plist
frontend/src/: App.css  App.jsx
frontend/src/contract/: BreedOracleConsumerAbi.js  verifier.js
frontend/src/hooks/: useBreedOracle.js
frontend/zk/: prover.js
mopro/: Cargo.toml
mopro/cli/BreedProof/: Cargo.toml  Config.toml
scripts/: deploy.js  deploy_verifier.js
smartcontracts/: hardhat.config.js  package-lock.json
smartcontracts/artifacts/contracts/BreedOracleConsumer.sol/: BreedOracleConsumer.json
smartcontracts/artifacts/contracts/BreedProofNFT.sol/: BreedProofNFT.json
smartcontracts/artifacts/contracts/BreedProofRegistry.sol/: BreedProofRegistry.json
smartcontracts/artifacts/contracts/Verifier.sol/: Groth16Verifier.dbg.json  Groth16Verifier.json
smartcontracts/cache/: solidity-files-cache.json
smartcontracts/contracts/: BreedOracleConsumer.sol  BreedProofNFT.sol  BreedProofRegistry.sol
smartcontracts/scripts/: deploy_oracle.js
(+5 files in other folders)
