[package]
name = "BreedProof"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["mopro-ffi/circom"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", features = ["uniffi"] }
rust-witness = "0.1"
num-bigint = "0.4.0"
thiserror = "2.0.12"

[build-dependencies]
rust-witness = "0.1"
